# RKSP_Courcework

./: .env.example  Dockerfile  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements-web.txt  requirements.txt
backend/: auth.py  config.py  crud.py  database.py  main.py  models.py  redis_client.py  schemas.py
backend/routers/: auth.py  projects.py  stats.py  tasks.py
console_client/: cli.py
tests/: test_fuzzing.py
web_client/: app.py  styles.css  ui_helpers.py
web_client/pages/: dashboard.py  projects.py  stats.py  tasks.py
