[project]
name = "taskmanager"
version = "1.0.0"
description = "Task Manager API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.1",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.1.1"
]

[tool.vercel]
entrypoint = "backend.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "requests>=2.32.0"
]